# QuoteWallpaper

./: .gitignore  CHANGELOG.md  ExtractMyClippings.cabal  My Clippings.txt  Quotewallpaper.cabal
app/: Main.hs
src/: App.hs  BashImg.hs  Clippings.hs  Commands.hs  DalleDownload.hs  ImageMagick.hs  QuoteWallpaper.hs  Quotewallpaper.hs  UsefulFunctions.hs  Wallpaper.hs  WikimediaAPI.hs
src/Commands/: Common.hs  Hyprland.hs  KDE.hs  Windows.hs
tests/: tests.hs
