cabal-version:      2.4
name:               ExtractMyClippings
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             landseal
maintainer:         kenndesilva1@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Quotewallpaper

    -- Modules included in this library but not exported.
    other-modules:    Wallpaper,
                      Clippings,
                      WikimediaAPI

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      text,
                      time,
                      process,
                      req,
                      aeson,
                      vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable ExtractMyClippings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        ExtractMyClippings

    hs-source-dirs:   app
    default-language: Haskell2010
