cabal-version:      2.4
name:               Quotewallpaper
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             landseal
maintainer:         kenndesilva1@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common optimisation
    default-language: Haskell2010
    ghc-options:      -Wall -O2

-- LANGUAGE extensions used by modules in this package.
common common-dependencies
    build-depends:    base >=4.14.3.0,
                      text,
                      bytestring,
                      time,
                      process,
                      req,
                      aeson,
                      vector,
                      directory,
                      mtl,
                      random

library
    import:           optimisation, common-dependencies
    exposed-modules:  Quotewallpaper

    -- Modules included in this library but not exported.
    other-modules:    Clippings,
                      Commands,
                      Commands.KDE,
                      Commands.Windows,
                      WikimediaAPI,
                      UsefulFunctions,
                      DalleDownload

    -- other-extensions:
    hs-source-dirs:   src
    default-language: Haskell2010

executable Quotewallpaper
    import:           optimisation
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.14.3.0,
        Quotewallpaper

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    import: common-dependencies
    type: exitcode-stdio-1.0
    main-is: tests.hs
    other-modules: DalleDownload
    build-depends: base ^>=4.14.3.0,
                    HUnit
    hs-source-dirs: tests, src
    default-language: Haskell2010
